--- a/test/highlight/comments.cpp.html
+++ b/test/highlight/comments.cpp.html
@@ -10,7 +10,7 @@
 <h- data-h=cmt.delim>/*</h-><h- data-h=cmt> block comment on next line </h-><h- data-h=cmt.delim>*/</h->
 
 <h- data-h=cmt.delim>//</h-><h- data-h=cmt> comment line</h->
-<h- data-h=id>noncomment</h->
+<h- data-h=id>noncomment</h-><h- data-h=sym.etc>;</h->
 
 <h- data-h=cmt.delim>//</h-><h- data-h=cmt> a</h->
 <h- data-h=cmt.delim>//</h-><h- data-h=cmt> b</h->
