use diff in tests, update test expectations for ulight

--- a/test/codeblock/trim.html
+++ b/test/codeblock/trim.html
@@ -1,5 +1,5 @@
 <code-block>abc</code-block>
 <code-block>abc</code-block>
 
-<code-block><h- data-h=key>xxx</h-></code-block>
-<code-block><h- data-h=key>xxx</h-></code-block>
+<code-block><h- data-h=kw>xxx</h-></code-block>
+<code-block><h- data-h=kw>xxx</h-></code-block>
