--- a/assets/test.html
+++ b/assets/test.html
@@ -7,12 +7,7 @@
     <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap">
     <style>@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');</style>
     <link rel=stylesheet href="main.css"/>
-    <script>
-        const theme = localStorage.getItem("mmml-theme");
-        if (theme !== null) {
-            document.documentElement.className = theme;
-        }
-    </script>
+    <script src="light-dark.js"></script>
 </head>
 
 <body>
