resolve reference for Test_Behavior::paragraphs, update test expectations

--- a/test/big.cow.html
+++ b/test/big.cow.html
@@ -93,9 +93,9 @@ Sub: -10</p>
 <h5 id=h5><a class=para href=#h5></a>1.1.1.1. H5</h5>
 <h6 id=h6><a class=para href=#h6></a>1.1.1.1.1. H6</h6>
 
-<p>Inline here: 󰀇here-id</p>
+<p>Inline here: Elsewhere</p>
 
-<p>Block here: </p>󰀇here-id
+<p>Block here: </p>Elsewhere
 
 <p>Goes to here-id: </p>
 
@@ -117,9 +117,19 @@ Awoo!
 
 <p><a href=mailto:john@gmail%2ecom class=sans>john@gmail.com</a></p>
 
-<div class=bib>󰀇std.bib</div>
+<div class=bib></div>
 
-<div class=toc>󰀇std.toc</div>
+<div class=toc><div class=toc-num data-level=2>1</div>
+<a href=#h2><h2>H2</h2></a>
+<div class=toc-num data-level=3>1.1</div>
+<a href=#h3><h3>H3</h3></a>
+<div class=toc-num data-level=4>1.1.1</div>
+<a href=#h4><h4>H4</h4></a>
+<div class=toc-num data-level=5>1.1.1.1</div>
+<a href=#h5><h5>H5</h5></a>
+<div class=toc-num data-level=6>1.1.1.1.1</div>
+<a href=#h6><h6>H6</h6></a>
+</div>
 
 <p><mark>Marked</mark> text <mark>marked</mark>.
 </p>
