fix premature return in bibliography generation; adjust text expectations

--- a/test/big.cow.html
+++ b/test/big.cow.html
@@ -117,7 +117,10 @@ Awoo!
 
 <p><a href=mailto:john@gmail%2ecom class=sans>john@gmail.com</a></p>
 
-<div class=bib></div>
+<div class=bib><div id=bib-item-XYZ class=bib-item>
+[XYZ]
+<span class=bib-title>Sample bibliography item</span>
+<span class=bib-date>1970-01-01</span></div></div>
 
 <div class=toc><div class=toc-num data-level=2>1</div>
 <a href=#h2><h2>H2</h2></a>
