--- a/test/policy/highlight.cow.html
+++ b/test/policy/highlight.cow.html
@@ -1,5 +1,5 @@
 
-<h- data-h=id>Text</h->
+<h- data-h=name>Text</h->
 \
-<span><h- data-h=id>directive</h-></span>
+<span><h- data-h=name>directive</h-></span>
 
